--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ libc = "0.2"
 ndarray = "0.16.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.135"
+thiserror = "2.0.9"
 tracing = "0.1.41"
 
 [build-dependencies]
