--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 cty = "0.2.2"
+hdf5 = { package = "hdf5-metno", version = "0.9.0" }
 libc = "0.2"
 ndarray = "0.16.1"
 serde = { version = "1.0", features = ["derive"] }
