--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ cty = "0.2.2"
 hdf5 = { package = "hdf5-metno", version = "0.9.0" }
 libc = "0.2"
 ndarray = "0.16.1"
+ordered-float = "4.6.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.135"
 thiserror = "2.0.9"
