--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,16 +4,29 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.39"
+criterion = "0.5.1"
+csv = "1.3.1"
 cty = "0.2.2"
+env_logger = "0.11.6"
 hdf5 = { package = "hdf5-metno", version = "0.9.0" }
+indicatif = "0.17.9"
 libc = "0.2"
+log = "0.4.25"
 ndarray = "0.16.1"
 ordered-float = "4.6.0"
+rand = "0.8.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.135"
 thiserror = "2.0.9"
-tracing = "0.1.41"
 
 [build-dependencies]
 bindgen = "0.71.1"
 cc = { version = "1.2.7", features = ["parallel"] }
+
+[[bench]]
+name = "puffinn_clann_comparison"
+harness = false
+
+[profile.release]
+debug = true
