--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ criterion = "0.5.1"
 csv = "1.3.1"
 cty = "0.2.2"
 env_logger = "0.11.6"
-hdf5 = { package = "hdf5-metno", version = "0.9.0" }
+hdf5 = { package = "hdf5-metno", version = "0.9.0", features = ["static"]}
 indicatif = "0.17.9"
 libc = "0.2"
 log = "0.4.25"
