--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.39"
-criterion = "0.5.1"
 csv = "1.3.1"
 cty = "0.2.2"
 env_logger = "0.11.6"
@@ -15,7 +14,6 @@ libc = "0.2"
 log = "0.4.25"
 ndarray = "0.16.1"
 ordered-float = "4.6.0"
-rand = "0.8.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.135"
 thiserror = "2.0.9"
@@ -23,6 +21,10 @@ thiserror = "2.0.9"
 [build-dependencies]
 bindgen = "0.71.1"
 cc = { version = "1.2.7", features = ["parallel"] }
+
+[dev-dependencies]
+criterion = "0.5.1"
+rand = "0.8.5"
 
 [[bench]]
 name = "distance_benches"
