--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ ordered-float = "4.6.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.135"
 thiserror = "2.0.9"
+rusqlite = { version = "0.33.0", features = ["bundled", "chrono"] }
 
 [build-dependencies]
 bindgen = "0.71.1"
