fix: Benchmarks error are skipped

--- a/benches/configs.json
+++ b/benches/configs.json
@@ -1,6 +1,13 @@
 [
     {
         "kb_per_point": 1,
+        "num_clusters_factor": 0.02,
+        "k": 10,
+        "delta": 0.9,
+        "dataset_name" : "glove-25-angular"
+    },
+    {
+        "kb_per_point": 1,
         "num_clusters_factor": 0.06,
         "k": 10,
         "delta": 0.9,
@@ -16,6 +23,41 @@
     {
         "kb_per_point": 1,
         "num_clusters_factor": 0.1,
+        "k": 10,
+        "delta": 0.9,
+        "dataset_name" : "glove-25-angular"
+    },
+    {
+        "kb_per_point": 1,
+        "num_clusters_factor": 0.13,
+        "k": 10,
+        "delta": 0.9,
+        "dataset_name" : "glove-25-angular"
+    },
+    {
+        "kb_per_point": 1,
+        "num_clusters_factor": 0.15,
+        "k": 10,
+        "delta": 0.9,
+        "dataset_name" : "glove-25-angular"
+    },
+    {
+        "kb_per_point": 1,
+        "num_clusters_factor": 0.17,
+        "k": 10,
+        "delta": 0.9,
+        "dataset_name" : "glove-25-angular"
+    },
+    {
+        "kb_per_point": 1,
+        "num_clusters_factor": 0.2,
+        "k": 10,
+        "delta": 0.9,
+        "dataset_name" : "glove-25-angular"
+    },
+    {
+        "kb_per_point": 1,
+        "num_clusters_factor": 0.3,
         "k": 10,
         "delta": 0.9,
         "dataset_name" : "glove-25-angular"
