--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,5 +35,9 @@ harness = false
 name = "time_benches"
 harness = false
 
+[[bench]]
+name = "puffinn_limits_benches"
+harness = false
+
 [profile.release]
 debug = true
