--- a/benches/configs.json
+++ b/benches/configs.json
@@ -1,14 +1,98 @@
 [
     {
         "kb_per_point": 1,
-        "num_clusters_factor": 0.02,
+        "num_clusters_factor": 0.05,
         "k": 10,
         "delta": 0.9,
         "dataset_name" : "glove-25-angular"
     },
     {
         "kb_per_point": 1,
-        "num_clusters_factor": 0.06,
+        "num_clusters_factor": 0.1,
+        "k": 10,
+        "delta": 0.9,
+        "dataset_name" : "glove-25-angular"
+    },
+    {
+        "kb_per_point": 1,
+        "num_clusters_factor": 0.15,
+        "k": 10,
+        "delta": 0.9,
+        "dataset_name" : "glove-25-angular"
+    },
+    {
+        "kb_per_point": 1,
+        "num_clusters_factor": 0.2,
+        "k": 10,
+        "delta": 0.9,
+        "dataset_name" : "glove-25-angular"
+    },
+    {
+        "kb_per_point": 1,
+        "num_clusters_factor": 0.25,
+        "k": 10,
+        "delta": 0.9,
+        "dataset_name" : "glove-25-angular"
+    },
+    {
+        "kb_per_point": 1,
+        "num_clusters_factor": 0.3,
+        "k": 10,
+        "delta": 0.9,
+        "dataset_name" : "glove-25-angular"
+    },
+    {
+        "kb_per_point": 1,
+        "num_clusters_factor": 0.35,
+        "k": 10,
+        "delta": 0.9,
+        "dataset_name" : "glove-25-angular"
+    },
+    {
+        "kb_per_point": 1,
+        "num_clusters_factor": 0.4,
+        "k": 10,
+        "delta": 0.9,
+        "dataset_name" : "glove-25-angular"
+    },
+    {
+        "kb_per_point": 1,
+        "num_clusters_factor": 0.45,
+        "k": 10,
+        "delta": 0.9,
+        "dataset_name" : "glove-25-angular"
+    },
+    {
+        "kb_per_point": 1,
+        "num_clusters_factor": 0.5,
+        "k": 10,
+        "delta": 0.9,
+        "dataset_name" : "glove-25-angular"
+    },
+    {
+        "kb_per_point": 1,
+        "num_clusters_factor": 0.55,
+        "k": 10,
+        "delta": 0.9,
+        "dataset_name" : "glove-25-angular"
+    },
+    {
+        "kb_per_point": 1,
+        "num_clusters_factor": 0.6,
+        "k": 10,
+        "delta": 0.9,
+        "dataset_name" : "glove-25-angular"
+    },
+    {
+        "kb_per_point": 1,
+        "num_clusters_factor": 0.65,
+        "k": 10,
+        "delta": 0.9,
+        "dataset_name" : "glove-25-angular"
+    },
+    {
+        "kb_per_point": 1,
+        "num_clusters_factor": 0.7,
         "k": 10,
         "delta": 0.9,
         "dataset_name" : "glove-25-angular"
