--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.135"
 thiserror = "2.0.9"
 rusqlite = { version = "0.33.0", features = ["bundled", "chrono"] }
+rand = "0.8.5"
 
 [build-dependencies]
 bindgen = "0.71.1"
